fix: align to grid start

--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@
   min-height: 600px;
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   padding: 4vw 0;
 }
